# Tmod-Blog-Backend

./: README.md  manage.py  pyproject.toml  requirements.txt
TmodBlog/: asgi.py  settings.py  urls.py  wsgi.py
apps/BlogManager/: apps.py  urls.py
apps/BlogManager/admin/: article.py
apps/BlogManager/api/: blog_api.py
apps/BlogManager/migrations/: 0001_initial.py  0002_alter_featuresmodel_name.py  0003_featuretypesmodel_remove_featuresmodel_name_and_more.py
apps/BlogManager/models/: atrticle.py  features.py
apps/UserManager/: apps.py  urls.py
apps/UserManager/admin/: user.py
apps/UserManager/api/: user_api.py
apps/UserManager/migrations/: 0001_initial.py
apps/UserManager/models/: user.py
