[project]
name = "TmodBlog"
version = "0.1.0"
description = "tmod-blog"
authors = [
    {name = "tmod", email = ""},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
